--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -39,4 +39,4 @@ jobs:
         run: docker build -t victormsonter/dev_fuse:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push victormsonter/dev-fuse:latest
+        run: docker push victormsonter/dev_fuse:latest
