--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=DevFuse
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/devops_db
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql= true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.config.import=secrets.properties
+spring.jpa.properties.hibernate.database-platform=org.hibernate.dialect.PostGreSQLDialect
